# teder

./: pyproject.toml
client/: .eslintrc.js  package-lock.json  package.json
client/src/: App.jsx  index.css  index.jsx  setupProxy.js  utils.js
client/src/components/: EnterName.jsx  Guessing.jsx  Hinting.jsx  JoinRoom.jsx  Room.jsx  Waiting.jsx
client/src/pages/: Home.jsx  Room.jsx
teder/: main.py  models.py  prompts.csv
tests/: test_teder.py
