[tool.poetry]
name = "teder"
version = "0.1.0"
description = ""
authors = ["Yoav Tzfati <yoav.tzfati@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.*"
Flask = "^1.1.2"
Flask-SocketIO = "^5.0.1"
eventlet = "^0.30.2"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
rope = "^0.19.0"
flake8 = "^3.9.1"
pylint = "^2.7.4"
ipykernel = "^5.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
